# Polypent

./: .gitignore  .golangci.yml  LICENSE  README.md  SECURITY.md  go.mod  go.sum
.github/: CODEOWNERS
.github/workflows/: ci.yml
cmd/polypent/: main.go
cmd/polypentd/: main.go
collectors/python/: pyproject.toml
collectors/python/echo/: main.py
collectors/python/ldap_enum/: main.py
collectors/python/smb_enum/: main.py
collectors/rust/: Cargo.toml
collectors/rust/discover-tcp/: Cargo.toml
collectors/rust/discover-tcp/src/: main.rs
docs/: architecture.md  collector-protocol.md  migration-plan.md  threat-model.md  walkthrough.md
internal/api/: handlers_artifacts.go  handlers_catalog.go  handlers_findings.go  handlers_manifest.go  handlers_projects.go  handlers_runs.go  handlers_scope.go  handlers_secrets.go  handlers_targets.go  handlers_tokens.go  integration_chaos_test.go  integration_concurrency_test.go  integration_discovery_test.go  integration_manifest_test.go  integration_phase4_test.go  integration_scope_test.go  integration_secret_dispatch_test.go  integration_secrets_test.go  integration_test.go  integration_tokens_test.go  middleware.go  openapi.go  openapi.json  server.go
internal/artifact/: meta.go  store.go  store_test.go
internal/audit/: audit.go
internal/auth/: middleware.go  token.go
internal/catalog/: catalog.go
internal/collector/: collector.go
internal/config/: config.go  config_test.go
internal/conformance/: conformance.go  suite_test.go
internal/finding/: finding.go
internal/manifest/: manifest.go  manifest_test.go
internal/project/: project.go  store.go
internal/queue/: queue.go
internal/run/: run.go
internal/scope/: scope.go  scope_test.go  store.go
(+33 files in other folders)
