[package]
name = "discover-tcp"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "PolyPent reference Rust collector — bounded high-throughput TCP-connect discovery."

[[bin]]
name = "discover-tcp"
path = "src/main.rs"

[dependencies]
serde_json = { workspace = true }
